--- a/src/SenseNet.Search.Lucene29.Centralized.Service/packages.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/packages.config
@@ -1,31 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.2" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.7" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.14" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.16" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.7" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="3.1.16" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.16" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="RabbitMQ.Client" version="5.1.2" targetFramework="net461" />
-  <package id="SenseNet.Common" version="7.5.1" targetFramework="net461" />
-  <package id="SenseNet.Search" version="2.4.6" targetFramework="net461" />
+  <package id="SenseNet.Common" version="7.5.4" targetFramework="net461" />
+  <package id="SenseNet.Search" version="2.4.7" targetFramework="net461" />
   <package id="SenseNet.Search.Lucene29.Lucene.Net" version="2.9.4.301" targetFramework="net461" />
-  <package id="SenseNet.Security" version="4.1.0" targetFramework="net461" />
-  <package id="SenseNet.Security.EF6SecurityStore" version="4.1.0" targetFramework="net461" />
+  <package id="SenseNet.Security" version="4.1.2" targetFramework="net461" />
+  <package id="SenseNet.Security.EF6SecurityStore" version="4.1.1" targetFramework="net461" />
   <package id="SenseNet.Security.Messaging.RabbitMQ" version="1.2.0" targetFramework="net461" />
-  <package id="SenseNet.Tools" version="3.2.6" targetFramework="net461" />
+  <package id="SenseNet.Tools" version="3.2.7" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.8.1" targetFramework="net461" />
   <package id="System.Diagnostics.EventLog" version="4.5.0" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
   <package id="System.ServiceModel.Http" version="4.7.0" targetFramework="net461" />
   <package id="System.ServiceModel.Primitives" version="4.7.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
 </packages>
