--- a/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
+++ b/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
@@ -130,6 +130,9 @@
     <Reference Include="SenseNet.ContentRepository, Version=7.7.27.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\SenseNet.ContentRepository.7.7.27.1\lib\netstandard2.0\SenseNet.ContentRepository.dll</HintPath>
     </Reference>
+    <Reference Include="SenseNet.ContentRepository.InMemory, Version=0.0.23.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SenseNet.ContentRepository.InMemory.0.0.23.1\lib\netstandard2.0\SenseNet.ContentRepository.InMemory.dll</HintPath>
+    </Reference>
     <Reference Include="SenseNet.Preview, Version=7.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\SenseNet.Preview.7.2.1\lib\netstandard2.0\SenseNet.Preview.dll</HintPath>
     </Reference>
