--- a/src/Tests/SenseNet.Search.Lucene29.Tests/packages.config
+++ b/src/Tests/SenseNet.Search.Lucene29.Tests/packages.config
@@ -29,6 +29,7 @@
   <package id="SenseNet.BlobStorage" version="7.6.3.1" targetFramework="net461" />
   <package id="SenseNet.Common" version="7.5.4" targetFramework="net461" />
   <package id="SenseNet.ContentRepository" version="7.7.27.1" targetFramework="net461" />
+  <package id="SenseNet.ContentRepository.InMemory" version="0.0.23.1" targetFramework="net461" />
   <package id="SenseNet.Preview" version="7.2.1" targetFramework="net461" />
   <package id="SenseNet.Search" version="2.4.7" targetFramework="net461" />
   <package id="SenseNet.Search.Lucene29.Lucene.Net" version="2.9.4.301" targetFramework="net461" />
