--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
@@ -19,8 +19,10 @@
     "tracing": {
       "TraceCategories": "System,Security,Index"
     },
-    "rabbitmq": {
-      "ServiceUrl": ""
-    }
+    "security": {
+      "rabbitmq": {
+        "ServiceUrl": ""
+      }
+    } 
   }
 }
